Fixed issue with pop up not showing corect info

--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@ img {
     height: 200px;
     width : auto;
     cursor : pointer 
+    
 }
-.level-winner {
+.pop-up {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -22,5 +23,6 @@ img {
     opacity: 0;
     pointer-events: none;
     transition: all 250ms ease;
+    color : white;
   }
 
